overflow-x resolved

--- a/style.css
+++ b/style.css
@@ -388,13 +388,17 @@ footer p {
 }
 
 @media screen and (max-width: 627px) {
-    body {
+    body,
+    html {
         overflow-x: hidden;
+        position: relative;
     }
     .profile-image img {
         width: 250px;
         height: 250px;
-         margin-left: 30px; 
+        margin-left: 30px; 
+    }
+    .profile-image {
         z-index: -1;
     }
     .container {
@@ -437,12 +441,12 @@ footer p {
         position: absolute;
         right: 00px;
         height: 90vh;
-        top : 8vh;
+        top : 13vh;
         background-color: #181818;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        width: 28%;
+        width: 31%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
         
